Fix(og-meta-tags): update Open Graph meta tags for improved sharing

--- a/src/main/resources/templates/CreateAssertion/htmlPayload.html
+++ b/src/main/resources/templates/CreateAssertion/htmlPayload.html
@@ -11,10 +11,10 @@
     <meta name="description" content="{assertion.badgeClass.description}">
     <link rel="canonical" href="{baseUrl}/api/v2/assertions/{assertion.id}">
 
-    <meta property="og:site_name" content="XalixcoLabs">
+    <meta property="og:site_name" content="Open Badges Platform">
     <meta property="og:type" content="website">
     <meta property="og:url" content="{baseUrl}/api/v2/assertions/{assertion.id}">
-    <meta property="og:title" content="Insignia Digital: {assertion.badgeClass.name}">
+    <meta property="og:title" content="{assertion.badgeClass.name}">
     <meta property="og:description"
         content="Acreditación oficial emitida por {assertion.badgeClass.issuer.name} para {assertion.account.fullName}">
     <meta property="og:image" content="{baseUrl}/api/storage/images/{assertion.badgeClass.image.id}">
